examples/test/testpolicy17322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17322
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key34: value1
      key10: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value10
          key30: value21
      podSelector:
        matchLabels:
          key9: value40
